src/test/ui/in-band-lifetimes/issue-61124-anon-lifetime-in-struct-declaration.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-61124-anon-lifetime-in-struct-declaration.rs:8:19
   |
LL | struct Heartbreak(Betrayal);
   |                   ^^^^^^^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL | struct Heartbreak<'a>(Betrayal<'a>);
   |                  ^^^^ ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
